--- a/default.project.json
+++ b/default.project.json
@@ -21,7 +21,9 @@
 
     "StarterPlayer": {
       "StarterPlayerScripts": {
-          "$path": "src/client"
+        "Client":{
+          "$path": "src/Client"
+        }
       }
     },
 
